# ECGAnalysis

./: CMakeLists.txt  Makefile  README.md  Readme.md  easytest.c  inputs.h  main.cpp  qrsdet2.c
EC13_Files/: EC13_1.HEA  EC13_10.HEA  EC13_11.HEA  EC13_12.HEA  EC13_13.HEA  EC13_14.HEA  EC13_15.HEA  EC13_16.HEA  EC13_17.HEA  EC13_18.HEA  EC13_19.HEA  EC13_2.HEA  EC13_20.HEA  EC13_21.HEA  EC13_22.HEA  EC13_23.HEA  EC13_24.HEA  EC13_25.HEA  EC13_26.HEA  EC13_27.HEA  EC13_28.HEA  EC13_29.HEA  EC13_3.HEA  EC13_30.HEA  EC13_31.HEA  EC13_32.HEA  EC13_33.HEA  EC13_34.HEA  EC13_35.HEA  EC13_36.HEA  EC13_37.HEA  EC13_38.HEA  EC13_39.HEA  EC13_4.HEA  EC13_40.HEA  EC13_41.HEA  EC13_42.HEA  EC13_5.HEA  EC13_6.HEA  EC13_7.HEA  (+2 more)
